Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16161

[Win] Output is not seen in Application Output tab while debugging a test.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • Qt Creator 4.4.0
    • Qt Creator 4.0.0-rc1
    • Debugger
    • None
    • Windows 7 x64, Qt Creator 4.0.0-rc1, (Visual Studio 2015 installed), cdb debugger engine.

      On windows when debugging a test with Qt Creator / cdb, no output is being shown in the Application Output pane.
      If I just run the test, then the output is shown.
      Note this is without the "Run in terminal" checkbox under Run options.
      Anecdotal knowledge says that this used to work before.

      Example test: qtbase/tests/auto/widgets/widgets/qopenglwidget/qopenglwidget.pro

        For Gerrit Dashboard: QTCREATORBUG-16161
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            alexandru.croitor Alexandru Croitor
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes